# firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  config.proto  prj.conf  test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-feature.md
boards/: nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_common.dts  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay
build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config  zephyr_modules.txt
build_1/Kconfig/: Kconfig.shield
build_1/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  shared_vars.cmake  sysbuild_modules.txt
build_1/mcuboot/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.shield
build_1/mcuboot/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_1/modules/cjson/: cmake_install.cmake
build_1/modules/cmsis/: cmake_install.cmake
build_1/modules/hal_nordic/: cmake_install.cmake
build_1/modules/loramac-node/: cmake_install.cmake
build_1/modules/lvgl/: cmake_install.cmake
build_1/modules/lz4/: cmake_install.cmake
build_1/modules/mbedtls/: cmake_install.cmake
build_1/modules/mcuboot/: cmake_install.cmake
build_1/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
build_1/zephyr/: .cmake.dotconfig.checksum  .config  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dfu_application.zip_manifest.json  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  mcuboot_primary.hex  mcuboot_primary_app.hex  merged.hex  runners.yaml  tfm_nonsecure.hex  tfm_secure.hex  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_final.map  zephyr_pre0.map
ext_sensors/: Kconfig  ext_sensors.c
src/: data.pb.cc  data.pb.h  data.proto  main.c  settings_nvs.c  settings_nvs.h
src/json_payload/: json_payload.c  json_payload.h
src/proto/: config.pb.cc  config.pb.h  data.pb.cc  data.pb.h
src/settings_defs/: CMakeLists.txt  settings_defs.c  settings_defs.h
(+213 files in other folders)
